# Skills-Cubed

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_mcp_endpoint.py
docs/: devpost_submission.md
docs/adr/: adr_001_mcp_architecture.md  adr_003_llm_strategy.md  adr_004_hosting_strategy.md
docs/handoff/: instance_summary.md  phase2_bootstrap.md
docs/prompts/: claude_init.md  codex_reviewer_init.md  hackathon_bootstrap.md  instance_summary_bootstrap.md
docs/specs/: hosting_spec.md  mcp_tools_spec.md  skill_schema_spec.md
eval_output/: baseline.json  eval_results.partial.json
scripts/: explore_abcd.py  recover_eval_from_log.py  run_eval_slice.py  setup_data.sh  smoke_test.py  visualize_eval.py
src/db/: connection.py  queries.py
src/eval/: harness.py  metrics.py  resolution.py
src/llm/: client.py  prompts.py
src/orchestration/: create.py  search.py  update.py
src/server/: models.py  server.py
src/skills/: models.py
src/utils/: config.py
tests/: conftest.py
tests/test_db/: test_connection.py
tests/test_eval/: test_resolution.py
tests/test_llm/: test_client.py  test_prompts.py
tests/test_mcp_tools/: test_create_e2e.py  test_integration.py  test_search_e2e.py  test_update_e2e.py
tests/test_orchestration/: test_create.py  test_search.py  test_update.py
tests/test_server/: test_server.py
tests/test_skills/: test_models.py
